--- a/Source/Views/MainWindow.axaml
+++ b/Source/Views/MainWindow.axaml
@@ -10,7 +10,8 @@
         Title="Symbol Icon Manager">
     <TabControl>
         <!-- Icon Sets -->
-        <TabItem Header="Icon Sets">
+        <TabItem Header="Icon Sets"
+                 IsSelected="True">
             <local:IconSetsView />
         </TabItem>
         <!-- Font Builder -->
@@ -24,56 +25,8 @@
             <Grid />
         </TabItem>
         <!-- Application Tools -->
-        <TabItem Header="Application Tools"
-                 IsSelected="True">
-            <Grid Margin="10"
-                  RowDefinitions="Auto,Auto,*">
-                <StackPanel Grid.Row="0"
-                            Orientation="Horizontal"
-                            Spacing="5">
-                    <Button x:Name="SourceDirectoryButton"
-                            Content="Select Source Code"
-                            Click="SourceDirectoryButton_Click" />
-                    <Button x:Name="ListIconsButton"
-                            Content="List Used Icons"
-                            Click="ListIconsButton_Click" />
-                    <Button x:Name="RemapIconsButton"
-                            Content="Remap Icons"
-                            Click="RemapIconsButton_Click" />
-                </StackPanel>
-                <TextBlock x:Name="SourcePathTextBlock"
-                           Grid.Row="1" />
-                <ListBox x:Name="ListBox"
-                         Grid.Row="2"
-                         Items="{Binding ListedIcons}"
-                         HorizontalAlignment="Stretch"
-                         VerticalAlignment="Stretch">
-                    <ListBox.ItemTemplate>
-                        <DataTemplate DataType="local:IconViewModel">
-                            <Grid ColumnDefinitions="Auto,Auto,*,Auto">
-                                <TextBlock Grid.Column="0"
-                                           Text="{Binding UnicodePoint}"
-                                           HorizontalAlignment="Stretch"
-                                           Margin="5"
-                                           VerticalAlignment="Center" />
-                                <Image Grid.Column="1"
-                                       Width="50"
-                                       Height="50"
-                                       Source="{Binding Glyph}" />
-                                <TextBlock Grid.Column="2"
-                                           Text="{Binding Name}"
-                                           VerticalAlignment="Center"
-                                           Margin="5" />
-                                <Button Grid.Column="3"
-                                        Content="Details"
-                                        Tag="{Binding}"
-                                        Click="IconViewModel_Click"
-                                        VerticalAlignment="Center" />
-                            </Grid>
-                        </DataTemplate>
-                    </ListBox.ItemTemplate>
-                </ListBox>
-            </Grid>
+        <TabItem Header="Application Tools">
+            <local:AppToolsView />
         </TabItem>
     </TabControl>
 </Window>
