--- a/Source/Views/IconMappingView.axaml
+++ b/Source/Views/IconMappingView.axaml
@@ -33,6 +33,13 @@
                     MinWidth="100"
                     Click="ClearButton_Click"
                     Margin="20,0,0,0" />
+            <Button x:Name="MergeInButton"
+                    IsEnabled="False"
+                    HorizontalContentAlignment="Center"
+                    Content="Merge In"
+                    MinWidth="100"
+                    Click="MergeInButton_Click"
+                    Margin="5,0,0,0" />
             <Button x:Name="BuildFontButton"
                     HorizontalContentAlignment="Center"
                     Content="Build Font"
@@ -40,19 +47,19 @@
                     Click="BuildFontButton_Click"
                     Margin="20,0,0,0" />
         </StackPanel>
-        <TextBlock Grid.Row="0"
-                   Text="{Binding FilteredMappings.Count, StringFormat='Count: {0}'}"
-                   HorizontalAlignment="Center"
-                   VerticalAlignment="Center" />
         <StackPanel Orientation="Horizontal"
                     Grid.Row="0"
                     HorizontalAlignment="Right">
+            <TextBlock Text="{Binding FilteredMappings.Count, StringFormat='Count: {0}'}"
+                       HorizontalAlignment="Center"
+                       VerticalAlignment="Center"
+                       Margin="0,0,5,0" />
             <TextBox x:Name="FilterTextBox"
                      Text="{Binding FilterText, Mode=TwoWay}"
                      Watermark="Filter"
                      Width="200" />
         </StackPanel>
-        <ListBox Grid.Row="2"
+        <ListBox Grid.Row="1"
                  Items="{Binding FilteredMappings}"
                  HorizontalAlignment="Stretch"
                  VerticalAlignment="Stretch">
@@ -136,7 +143,7 @@
                               Grid.Row="0"
                               Grid.RowSpan="4"
                               Grid.ColumnDefinitions="175,175,175"
-                              Grid.RowDefinitions="Auto,Auto,*"
+                              Grid.RowDefinitions="Auto,Auto,Auto,*"
                               Margin="10,0,0,0">
                             <TextBlock Grid.Column="0"
                                        Grid.Row="0"
@@ -150,31 +157,49 @@
                             <TextBlock Grid.Column="1"
                                        Grid.Row="0"
                                        Text="MetaphorMatchQuality"
-                                       Margin="5,0,5,0" />
+                                       Margin="5,0,0,0" />
                             <ComboBox Grid.Column="1"
                                       Grid.Row="1"
                                       HorizontalAlignment="Stretch"
                                       Background="{Binding MetaphorMatchQuality, Mode=OneWay, Converter={StaticResource MatchQualityToBrush}}"
                                       SelectedItem="{Binding MetaphorMatchQuality, Mode=TwoWay}"
                                       Items="{Binding MetaphorMatchQualityOptions}"
-                                      Margin="5,0,5,0" />
+                                      Margin="5,0,0,0" />
                             <CheckBox Grid.Column="2"
                                       Grid.Row="0"
-                                      Grid.RowSpan="2"
+                                      Grid.RowSpan="3"
                                       Content="IsPlaceholder"
                                       IsChecked="{Binding IsPlaceholder, Mode=TwoWay}"
                                       HorizontalAlignment="Center"
                                       VerticalAlignment="Center" />
+                            <Button x:Name="MatchQualityHelpButton"
+                                    Grid.Column="0"
+                                    Grid.ColumnSpan="2"
+                                    Grid.Row="2"
+                                    Height="15"
+                                    Background="Transparent"
+                                    Padding="0"
+                                    BorderThickness="0"
+                                    HorizontalAlignment="Stretch"
+                                    HorizontalContentAlignment="Left"
+                                    Click="MatchQualityHelpButton_Click">
+                                <Button.Content>
+                                    <Viewbox Stretch="Uniform">
+                                        <TextBlock Text="Help with MatchQuality"
+                                                   Foreground="Blue" />
+                                    </Viewbox>
+                                </Button.Content>
+                            </Button>
                             <TextBox Grid.Column="0"
                                      Grid.ColumnSpan="3"
-                                     Grid.Row="2"
+                                     Grid.Row="3"
                                      HorizontalAlignment="Stretch"
                                      VerticalAlignment="Stretch"
                                      Text="{Binding Comments, Mode=TwoWay}"
                                      TextWrapping="Wrap"
                                      AcceptsReturn="True"
                                      Watermark="Comments"
-                                     Margin="0,5,0,0" />
+                                     Margin="0,2,0,0" />
                         </Grid>
                     </Grid>
                 </DataTemplate>
