--- a/Source/Views/IconSetsView.axaml
+++ b/Source/Views/IconSetsView.axaml
@@ -36,7 +36,7 @@
                                Height="50"
                                Source="{Binding Glyph}" />
                         <TextBlock Grid.Column="1"
-                                   Text="{Binding UnicodeString}"
+                                   Text="{Binding UnicodeHexString}"
                                    HorizontalAlignment="Stretch"
                                    Margin="5"
                                    VerticalAlignment="Center" />
