--- a/Source/Views/IconMappingView.axaml
+++ b/Source/Views/IconMappingView.axaml
@@ -99,7 +99,15 @@
                                        Text="{Binding SourceViewModel.Name}"
                                        HorizontalAlignment="Stretch"
                                        VerticalAlignment="Center"
-                                       Margin="5,0,0,0" />
+                                       Margin="5,0,0,0"
+                                       IsVisible="{Binding !IsSourceNameEditable}" />
+                            <TextBox Grid.Column="1"
+                                     Grid.ColumnSpan="2"
+                                     Grid.Row="1"
+                                     Text="{Binding SourceViewModel.Name, Mode=TwoWay}"
+                                     HorizontalAlignment="Stretch"
+                                     IsVisible="{Binding IsSourceNameEditable}"
+                                     Margin="0,2,0,0" />
                         </Grid>
                         <!-- Destination Icon -->
                         <TextBlock Grid.Column="0"
@@ -134,7 +142,15 @@
                                        Text="{Binding DestinationViewModel.Name}"
                                        HorizontalAlignment="Stretch"
                                        VerticalAlignment="Center"
-                                       Margin="5,0,0,0" />
+                                       Margin="5,0,0,0"
+                                       IsVisible="{Binding !IsDestinationNameEditable}" />
+                            <TextBox Grid.Column="1"
+                                     Grid.ColumnSpan="2"
+                                     Grid.Row="1"
+                                     Text="{Binding DestinationViewModel.Name, Mode=TwoWay}"
+                                     HorizontalAlignment="Stretch"
+                                     IsVisible="{Binding IsDestinationNameEditable}"
+                                     Margin="0,2,0,0" />
                         </Grid>
                         <!-- Metadata -->
                         <Grid Grid.Column="1"
