Add view to simplify building common fonts

--- a/Source/Views/MainWindow.axaml
+++ b/Source/Views/MainWindow.axaml
@@ -22,5 +22,9 @@
         <TabItem Header="App Tools">
             <local:AppToolsView />
         </TabItem>
+        <!-- Font Management -->
+        <TabItem Header="Fonts">
+            <local:FontsView />
+        </TabItem>
     </TabControl>
 </Window>
