--- a/Source/Views/FontsView.axaml
+++ b/Source/Views/FontsView.axaml
@@ -8,7 +8,7 @@
              d:DesignHeight="450"
              x:Class="IconManager.FontsView">
     <Grid Margin="10"
-          RowDefinitions="Auto,Auto">
+          RowDefinitions="Auto,Auto,Auto">
         <Grid
             Grid.Row="0"
             Grid.ColumnDefinitions="Auto,Auto,Auto"
@@ -117,6 +117,47 @@
                         TextWrapping="Wrap" />
                 </CheckBox.Content>
             </CheckBox>
+        </Grid>
+        <Grid
+            Grid.Row="2"
+            Grid.ColumnDefinitions="Auto,Auto"
+            Grid.RowDefinitions="Auto,Auto"
+            Margin="0,20,0,0">
+            <TextBlock
+                Grid.Column="0"
+                Grid.ColumnSpan="2"
+                Grid.Row="0"
+                Text="Fluent UI System Fonts"
+                FontSize="16"
+                FontWeight="Bold"
+                Margin="0,0,0,20" />
+            <Button
+                Grid.Column="0"
+                Grid.Row="1"
+                Width="200"
+                HorizontalContentAlignment="Center"
+                Command="{Binding BuildFluentUISystemRegularFont}">
+                <Button.Content>
+                    <TextBlock
+                        Text="Build Fluent UI System Regular Font"
+                        TextAlignment="Center"
+                        TextWrapping="Wrap" />
+                </Button.Content>
+            </Button>
+            <Button
+                Grid.Column="1"
+                Grid.Row="1"
+                Width="200"
+                HorizontalContentAlignment="Center"
+                Command="{Binding BuildFluentUISystemFilledFont}"
+                Margin="5,0,0,0">
+                <Button.Content>
+                    <TextBlock
+                        Text="Build Fluent UI System Filled Font"
+                        TextAlignment="Center"
+                        TextWrapping="Wrap" />
+                </Button.Content>
+            </Button>
         </Grid>
     </Grid>
 </UserControl>
