--- a/Source/App.axaml
+++ b/Source/App.axaml
@@ -1,7 +1,10 @@
 <Application xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:fa="using:FluentAvalonia.Styling"
              x:Class="IconManager.App">
     <Application.Styles>
-        <FluentTheme Mode="Light"/>
+        <!--<FluentTheme Mode="Light"/>-->
+        <fa:FluentAvaloniaTheme PreferSystemTheme="False"
+                                RequestedTheme="Light" />
     </Application.Styles>
 </Application>
